--- a/amor/index_3.html
+++ b/amor/index_3.html
@@ -131,7 +131,7 @@
         <img src="img/bicep.gif" alt="neck ex" width="20%" height="25%">
     </div>
     <div style="padding-left: 78%">
-        <a href="index_2.html" id="go-to-next" class="btn btn-primary btn-lg align-items-center justify-content-center" style="visibility: hidden;">Proceed ahead</a>
+        <a href="../breathing/index.html" id="Start Meditation" class="btn btn-primary btn-lg align-items-center justify-content-center" style="visibility: hidden;">Proceed ahead</a>
     </div>
     <script src="js/jquery-1.12.1.min.js"></script>
     <!-- popper js -->
@@ -162,7 +162,7 @@
     <script src="js/contact.js"></script>
     <!-- custom js -->
     <script src="js/custom.js"></script>
-    <script src="./js1/sketch_2.js"></script>
+    <script src="./js1/sketch_3.js"></script>
     <script src="./js1/algo.js"></script>
     <script src="js1/p5.min.js"></script>
     <script src="js1/p5.dom.min.js"></script>
