--- a/amor/index_2.html
+++ b/amor/index_2.html
@@ -94,7 +94,7 @@
                         <li><a href="index.html">Neck Exercise</a></li>
                         <li><a href="index_1.html">Arms Exercise</a></li>
                         <li><a href="#">Waist Exercise</a></li>
-						<li><a href="index_3">Biceps Exercise</a></li>
+						<li><a href="index_3.html">Biceps Exercise</a></li>
                     </ul>
                 </div>
 				<a href = "../breathing/index.html" class="btn btn-dark" style="margin-left: 10px;" target="__blank">Meditate</a>
